2015-09-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix a help message of a menu item.
	(twittering-mode-menu): fix the help message for the menu item
	`twittering-other-user-timeline'.

	* twittering-mode.el: Update the embedded CA certificates with the
	latest http://curl.haxx.se/ca/cacert.pem .
	(twittering-ca-cert-list): update the CA certificates.

2015-03-15  David A. Shamma <aymanshamma@gmail.com>

	* twittering-mode.el: Add a pretty menubar menu. The keywords
	`:link' and `:prefix' are also added to the definition of the
	customization group of twittering-mode.
	(twittering-mode-menu): new menu.

2015-02-01  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix docstrings.

2015-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix indentation and tabs in docstrings.

2015-01-31  Xavier Maillard  <xavier@maillard.im>

	* twittering-mode.el: Install customize as much as
	possible. Change many docstrings. Try to silent (a bit) checkdoc
	checker tool. Update credits/copyrights.

2015-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Update copyright.

2015-01-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add new format specifiers "%FIELD" and
	"%FIELD-IF-NONZERO" to render a field of tweet.
	(twittering-status-format): update docstring.
	(twittering-generate-formater-for-first-spec): add new format
	specifiers "%FIELD[...]{...}" and "%FIELD-IF-NONZERO[...]{...}".

2015-01-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Move the footer line to the very end of the
	file. The previous position were inconsistent with the conventions
	of headers for Emacs libraries.

2014-12-31  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Extract media entities from a JSON object.
	(twittering-extract-common-element-from-json): extract media
	entities.

	* twittering-mode.el: Hide tweets matched with one of filter